# ust_python_training

./: README.md  employee.txt  employee_data01.csv  employees.txt  patient_summary copy.csv  patient_summary.csv  report.txt  ust_healthcare.csv  ust_healthcare_visits.csv
Sohan-Kumar-Rout/day--15/: main.py  pyproject.toml
Sohan-Kumar-Rout/day--15/ust_employee_telecom_device_registration/assignment_ust_employee_telecom_device_registration/: main.py  pyproject.toml
felix/day-13/my-first-fastapi-app/: pyproject.toml
felix/day-13/my-first-fastapi-app/day-14/: main.py  output.txt
felix/day-13/my-first-fastapi-app/day-15/: main.py
felix/day-13/my-first-fastapi-app/day-15/restorent_ordering_system/: pyproject.toml
felix/day-13/my-first-fastapi-app/day-15/ust_employee_telecom_device/: main.py  output.txt
felix/day-13/my-first-fastapi-app/day-16/: output.txt
felix/day-13/my-first-fastapi-app/day-16/jwt/: main.py
felix/day-13/my-first-fastapi-app/day-16/middleware/: main.py
felix/day-13/my-first-fastapi-app/day-16/ust_employee_laptop_inventory/: main.py
felix/day-13/my-first-fastapi-app/day-17/project/: auth.py  main.py
felix/day-13/my-first-fastapi-app/day-17/validation_practice/: main.py
felix/day-13/my-first-fastapi-app/day-18/: db.py  db_test.py  main.py  pyproject.toml
raswanthi/day15/: pyproject.toml
raswanthi/day15/task_employee_telecom/: main.py  output.txt  pyproject.toml
raswanthi/day15/task_restaurent_ordering_system/: log.txt  main.py  pyproject.toml
raswanthi/day15/task_ust_employee_telecom_device/: main.py  output.txt  pyproject.toml
(+6757 files in other folders)
