[project]
name = "day15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "task_restaurent_ordering_system",
    "task_ust_employee_telecom_device",
    "task_employee_telecom",
]
