[project]
name = "my-first-fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "day-14",
    "day-15",
    "day-15/ust_employee_telecom_device",
]
